projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/OrgSecurityScanner_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for the Org Security Scanner. Edit the Default record in Setup > Custom Metadata Types to tune score sensitivity or change the scan run retention limit. Changes take effect on the next scan - no code deploy required.</description>
    <label>Org Security Scanner Setting</label>
    <pluralLabel>Org Security Scanner Settings</pluralLabel>
</CustomObject>