projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/fields/MaxScanRuns__c.field-meta.xml
<CustomField>
    <fullName>MaxScanRuns__c</fullName>
    <description>Retention policy: how many completed scan runs to keep. When exceeded, the oldest run and all its findings are automatically deleted. Default: 5 (appropriate for developer sandboxes with 200MB storage limits).</description>
    <inlineHelpText>Maximum number of completed scan runs to retain. When exceeded, the oldest run and all its findings are automatically deleted. Default: 5 (sandbox). Increase for production compliance requirements.</inlineHelpText>
    <defaultValue>5</defaultValue>
    <label>Max Scan Runs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>