projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/fields/PortalHealthScoreThreshold__c.field-meta.xml
<CustomField>
    <fullName>PortalHealthScoreThreshold__c</fullName>
    <description>Minimum acceptable Salesforce Security Health Check score. SRA-007 fires a finding when the native score is below this value. Configurable without a code deploy.</description>
    <inlineHelpText>Minimum acceptable Salesforce Security Health Check score for Experience Cloud portals. SRA-007 fires when the native score is below this value. Default: 70.</inlineHelpText>
    <defaultValue>70</defaultValue>
    <label>SRA-007 Score Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>