projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/fields/ScoreCriticalCap__c.field-meta.xml
<CustomField>
    <fullName>ScoreCriticalCap__c</fullName>
    <description>Maximum total score deduction from Critical findings combined. Default: 40.</description>
    <inlineHelpText>Maximum total score deduction from Critical findings combined. Default: 40.</inlineHelpText>
    <defaultValue>40</defaultValue>
    <label>Critical Cap</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>