projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/fields/ScoreDeductCritical__c.field-meta.xml
<CustomField>
    <fullName>ScoreDeductCritical__c</fullName>
    <description>Score points deducted for each Critical finding before the cap is applied. Default: 10.</description>
    <inlineHelpText>Score points deducted for each Critical finding before the cap is applied. Default: 10.</inlineHelpText>
    <defaultValue>10</defaultValue>
    <label>Critical Deduction</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>