projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/fields/ScoreDeductHigh__c.field-meta.xml
<CustomField>
    <fullName>ScoreDeductHigh__c</fullName>
    <description>Score points deducted for each High finding before the cap is applied. Default: 4.</description>
    <inlineHelpText>Score points deducted for each High finding before the cap is applied. Default: 4.</inlineHelpText>
    <defaultValue>4</defaultValue>
    <label>High Deduction</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>