projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/fields/ScoreDeductInfo__c.field-meta.xml
<CustomField>
    <fullName>ScoreDeductInfo__c</fullName>
    <description>Score points deducted for each Informational finding before the cap is applied. Default: 0.1.</description>
    <inlineHelpText>Score points deducted for each Informational finding before the cap is applied. Default: 0.1.</inlineHelpText>
    <defaultValue>0.1</defaultValue>
    <label>Info Deduction</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>