projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/fields/ScoreDeductLow__c.field-meta.xml
<CustomField>
    <fullName>ScoreDeductLow__c</fullName>
    <description>Score points deducted for each Low finding before the cap is applied. Default: 0.5.</description>
    <inlineHelpText>Score points deducted for each Low finding before the cap is applied. Default: 0.5.</inlineHelpText>
    <defaultValue>0.5</defaultValue>
    <label>Low Deduction</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>