projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/fields/ScoreDeductMedium__c.field-meta.xml
<CustomField>
    <fullName>ScoreDeductMedium__c</fullName>
    <description>Score points deducted for each Medium finding before the cap is applied. Default: 2.</description>
    <inlineHelpText>Score points deducted for each Medium finding before the cap is applied. Default: 2.</inlineHelpText>
    <defaultValue>2</defaultValue>
    <label>Medium Deduction</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>