projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/fields/ScoreFloor__c.field-meta.xml
<CustomField>
    <fullName>ScoreFloor__c</fullName>
    <description>Minimum possible security score regardless of finding count. Prevents the score from reaching 0 which would be misleading for orgs with very large finding counts.</description>
    <inlineHelpText>Minimum possible security score regardless of finding count. Default: 5.</inlineHelpText>
    <defaultValue>5</defaultValue>
    <label>Score Floor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>