projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/fields/ScoreHighCap__c.field-meta.xml
<CustomField>
    <fullName>ScoreHighCap__c</fullName>
    <description>Maximum total score deduction from High findings combined. Default: 20.</description>
    <inlineHelpText>Maximum total score deduction from High findings combined. Default: 20.</inlineHelpText>
    <defaultValue>20</defaultValue>
    <label>High Cap</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>