projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/fields/ScoreInfoCap__c.field-meta.xml
<CustomField>
    <fullName>ScoreInfoCap__c</fullName>
    <description>Maximum total score deduction from Informational findings combined. Default: 5.</description>
    <inlineHelpText>Maximum total score deduction from Informational findings combined. Default: 5.</inlineHelpText>
    <defaultValue>5</defaultValue>
    <label>Info Cap</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>