projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/fields/ScoreLowCap__c.field-meta.xml
<CustomField>
    <fullName>ScoreLowCap__c</fullName>
    <description>Maximum total score deduction from Low findings combined. Default: 10.</description>
    <inlineHelpText>Maximum total score deduction from Low findings combined. Default: 10.</inlineHelpText>
    <defaultValue>10</defaultValue>
    <label>Low Cap</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>