projects/org-security-scanner/force-app/main/default/objects/OrgSecurityScanner_Setting__mdt/fields/ScoreMediumCap__c.field-meta.xml
<CustomField>
    <fullName>ScoreMediumCap__c</fullName>
    <description>Maximum total score deduction from Medium findings combined. Default: 20.</description>
    <inlineHelpText>Maximum total score deduction from Medium findings combined. Default: 20.</inlineHelpText>
    <defaultValue>20</defaultValue>
    <label>Medium Cap</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>